--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,14 @@
+# Theme
+theme = "polymathic"
+
 # The URL the site will be built for
 base_url = "https://macropads.k45514n.net"
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = false
+compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+build_search_index = false
 
 [markdown]
 # Whether to do syntax highlighting
@@ -14,3 +17,4 @@ highlight_code = true
 
 [extra]
 # Put all your custom variables here
+mode = "dark"
